GTFS types - GTFS schema and time type
-use new types in aciipb spec schema
-add time GTFS type support
-make parser and validator classes injectable
  -rewrite tests with mockito framework
  -remove now useless test fake schema resource files