@@ -16,26 +16,25 @@
 
 package org.mobilitydata.gtfsvalidator.validator;
 
-import com.google.common.io.Resources;
-import com.google.protobuf.TextFormat;
+import org.apache.commons.validator.routines.FloatValidator;
+import org.apache.commons.validator.routines.IntegerValidator;
+import org.apache.commons.validator.routines.RegexValidator;
+import org.apache.commons.validator.routines.UrlValidator;
 import org.junit.jupiter.api.Test;
 import org.mobilitydata.gtfsvalidator.domain.entity.ParsedEntity;
 import org.mobilitydata.gtfsvalidator.domain.entity.RawFileInfo;
 import org.mobilitydata.gtfsvalidator.protos.GtfsSpecificationProto;
 import org.mobilitydata.gtfsvalidator.usecase.notice.*;
 import org.mobilitydata.gtfsvalidator.usecase.notice.base.Notice;
+import org.mockito.ArgumentMatchers;
 
-import java.io.IOException;
-import java.nio.charset.StandardCharsets;
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.Map;
+import java.util.*;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.core.IsInstanceOf.instanceOf;
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.mockito.Mockito.*;
 
-@SuppressWarnings("UnstableApiUsage")
 class GtfsTypeValidatorTest {
 
     private static final String TEST_ID = "test_id";
@@ -43,49 +42,78 @@ class GtfsTypeValidatorTest {
     public static final String TEST_FILE_TST = "test_file.tst";
 
     @Test
-    void inRangeFloatDoNotGenerateNotice() throws IOException {
+    void inRangeFloatDoNotGenerateNotice() {
 
-        final GtfsSpecificationProto.CsvSpecProtos testGtfsSpec = TextFormat.parse(
-                Resources.toString(Resources.getResource("validator_float_range_test_gtfs_spec.asciipb"),
-                        StandardCharsets.UTF_8),
-                GtfsSpecificationProto.CsvSpecProtos.class
-        );
+        FloatValidator mockFloatValidator = mock(FloatValidator.class);
+        when(mockFloatValidator.isInRange(ArgumentMatchers.eq(Float.valueOf(-5.0f)),
+                ArgumentMatchers.eq(-6.66f),
+                ArgumentMatchers.eq(66.6f))).thenReturn(true);
 
-        GtfsTypeValidator underTest = new GtfsTypeValidator(testGtfsSpec.getCsvspec(0)
+        GtfsSpecificationProto.CsvSpecProto mockFileSpec = mock(GtfsSpecificationProto.CsvSpecProto.class);
+        GtfsSpecificationProto.ColumnSpecProto mockColumnSpec = mock(GtfsSpecificationProto.ColumnSpecProto.class);
+        when(mockColumnSpec.getName()).thenReturn("float_with_range");
+        when(mockColumnSpec.getFloatmin()).thenReturn(-6.66f);
+        when(mockColumnSpec.getFloatmax()).thenReturn(66.6f);
+
+        GtfsSpecificationProto.ColumnInputType mockInputType = mock(GtfsSpecificationProto.ColumnInputType.class);
+        when(mockInputType.getType()).thenReturn(GtfsSpecificationProto.ColumnInputType.InputType.FLOAT);
+
+        when(mockColumnSpec.getType()).thenReturn(mockInputType);
+        when(mockFileSpec.getColumnList()).thenReturn(List.of(mockColumnSpec));
+
+        GtfsTypeValidator underTest = new GtfsTypeValidator(mockFileSpec,
+                mockFloatValidator,
+                mock(IntegerValidator.class),
+                mock(UrlValidator.class),
+                mock(RegexValidator.class),
+                mock(RegexValidator.class),
+                Collections.emptySet()
         );
 
         Collection<Notice> result = underTest.validate(new ParsedEntity(
                 TEST_ID,
-                Map.of("float_std_with_range", -5.0f),
+                Map.of("float_with_range", -5.0f),
                 new RawFileInfo.RawFileInfoBuilder().filename(TEST_FILE_TST).build()
         ));
 
         assertEquals(0, result.size());
 
-        result = underTest.validate(new ParsedEntity(
-                TEST_ID,
-                Map.of("float_std_with_range", 5.0f),
-                new RawFileInfo.RawFileInfoBuilder().filename(TEST_FILE_TST).build()
-        ));
-
-        assertEquals(0, result.size());
+        verify(mockFloatValidator, times(1)).isInRange(
+                ArgumentMatchers.eq(Float.valueOf(-5.0f)),
+                ArgumentMatchers.eq(-6.66f),
+                ArgumentMatchers.eq(66.6f)
+        );
     }
 
     @Test
-    void outOfRangeFloatGenerateNotice() throws IOException {
+    void outOfRangeFloatGenerateNotice() {
 
-        final GtfsSpecificationProto.CsvSpecProtos testGtfsSpec = TextFormat.parse(
-                Resources.toString(Resources.getResource("validator_float_range_test_gtfs_spec.asciipb"),
-                        StandardCharsets.UTF_8),
-                GtfsSpecificationProto.CsvSpecProtos.class
-        );
+        FloatValidator mockFloatValidator = mock(FloatValidator.class);
 
-        GtfsTypeValidator underTest = new GtfsTypeValidator(testGtfsSpec.getCsvspec(0)
+        GtfsSpecificationProto.CsvSpecProto mockFileSpec = mock(GtfsSpecificationProto.CsvSpecProto.class);
+        GtfsSpecificationProto.ColumnSpecProto mockColumnSpec = mock(GtfsSpecificationProto.ColumnSpecProto.class);
+        when(mockColumnSpec.getName()).thenReturn("float_with_range");
+        when(mockColumnSpec.getFloatmin()).thenReturn(-6.66f);
+        when(mockColumnSpec.getFloatmax()).thenReturn(66.6f);
+
+        GtfsSpecificationProto.ColumnInputType mockInputType = mock(GtfsSpecificationProto.ColumnInputType.class);
+        when(mockInputType.getType()).thenReturn(GtfsSpecificationProto.ColumnInputType.InputType.FLOAT);
+
+        when(mockColumnSpec.getType()).thenReturn(mockInputType);
+        when(mockFileSpec.getColumnList()).thenReturn(List.of(mockColumnSpec));
+
+        GtfsTypeValidator underTest = new GtfsTypeValidator(mockFileSpec,
+                mockFloatValidator,
+                mock(IntegerValidator.class),
+                mock(UrlValidator.class),
+                mock(RegexValidator.class),
+                mock(RegexValidator.class),
+                Collections.emptySet()
         );
 
         Collection<Notice> result = underTest.validate(new ParsedEntity(
                 TEST_ID,
-                Map.of("float_std_with_range", 66.7f),
+                Map.of("float_with_range", 66.7f),
                 new RawFileInfo.RawFileInfoBuilder().filename(TEST_FILE_TST).build()
         ));
 
@@ -96,68 +124,85 @@ class GtfsTypeValidatorTest {
         assertEquals("E011", notice.getId());
         assertEquals("Out of range float value", notice.getTitle());
         assertEquals(TEST_FILE_TST, notice.getFilename());
-        assertEquals("Invalid value for field:float_std_with_range of entity with id:test_id -- " +
+        assertEquals("Invalid value for field:float_with_range of entity with id:test_id -- " +
                         "min:-6.66 max:66.6 actual:66.7",
                 notice.getDescription());
 
-        result = underTest.validate(new ParsedEntity(
-                TEST_ID,
-                Map.of("float_std" +
-                        "_with_range", -66.6f),
-                new RawFileInfo.RawFileInfoBuilder().filename(TEST_FILE_TST).build()
-        ));
-
-        assertEquals(1, result.size());
-
-        notice = new ArrayList<>(result).get(0);
-        assertThat(notice, instanceOf(FloatFieldValueOutOfRangeNotice.class));
-        assertEquals("E011", notice.getId());
-        assertEquals("Out of range float value", notice.getTitle());
-        assertEquals(TEST_FILE_TST, notice.getFilename());
-        assertEquals("Invalid value for field:float_std_with_range of entity with id:test_id -- " +
-                        "min:-6.66 max:66.6 actual:-66.6",
-                notice.getDescription());
+        verify(mockFloatValidator, times(1)).isInRange(
+                ArgumentMatchers.eq(Float.valueOf(66.7f)),
+                ArgumentMatchers.eq(-6.66f),
+                ArgumentMatchers.eq(66.6f)
+        );
     }
 
     @Test
-    void inRangeIntegerDoNotGenerateNotice() throws IOException {
+    void inRangeIntegerDoNotGenerateNotice() {
 
-        final GtfsSpecificationProto.CsvSpecProtos testGtfsSpec = TextFormat.parse(
-                Resources.toString(Resources.getResource("validator_integer_range_test_gtfs_spec.asciipb"),
-                        StandardCharsets.UTF_8),
-                GtfsSpecificationProto.CsvSpecProtos.class
-        );
+        IntegerValidator mockIntegerValidator = mock(IntegerValidator.class);
+        when(mockIntegerValidator.isInRange(ArgumentMatchers.eq(Integer.valueOf(5)),
+                ArgumentMatchers.eq(-6),
+                ArgumentMatchers.eq(66))).thenReturn(true);
 
-        GtfsTypeValidator underTest = new GtfsTypeValidator(testGtfsSpec.getCsvspec(0)
+        GtfsSpecificationProto.CsvSpecProto mockFileSpec = mock(GtfsSpecificationProto.CsvSpecProto.class);
+        GtfsSpecificationProto.ColumnSpecProto mockColumnSpec = mock(GtfsSpecificationProto.ColumnSpecProto.class);
+        when(mockColumnSpec.getName()).thenReturn("integer_with_range");
+        when(mockColumnSpec.getIntmin()).thenReturn(-6);
+        when(mockColumnSpec.getIntmax()).thenReturn(66);
+
+        GtfsSpecificationProto.ColumnInputType mockInputType = mock(GtfsSpecificationProto.ColumnInputType.class);
+        when(mockInputType.getType()).thenReturn(GtfsSpecificationProto.ColumnInputType.InputType.INTEGER);
+
+        when(mockColumnSpec.getType()).thenReturn(mockInputType);
+        when(mockFileSpec.getColumnList()).thenReturn(List.of(mockColumnSpec));
+
+        GtfsTypeValidator underTest = new GtfsTypeValidator(mockFileSpec,
+                mock(FloatValidator.class),
+                mockIntegerValidator,
+                mock(UrlValidator.class),
+                mock(RegexValidator.class),
+                mock(RegexValidator.class),
+                Collections.emptySet()
         );
 
         Collection<Notice> result = underTest.validate(new ParsedEntity(
                 TEST_ID,
-                Map.of("int_dec_with_range", -5),
+                Map.of("integer_with_range", 5),
                 new RawFileInfo.RawFileInfoBuilder().filename(TEST_FILE_TST).build()
         ));
 
         assertEquals(0, result.size());
 
-        result = underTest.validate(new ParsedEntity(
-                TEST_ID,
-                Map.of("int_dec_with_range", 5),
-                new RawFileInfo.RawFileInfoBuilder().filename(TEST_FILE_TST).build()
-        ));
-
-        assertEquals(0, result.size());
+        verify(mockIntegerValidator, times(1)).isInRange(
+                ArgumentMatchers.eq(Integer.valueOf(5)),
+                ArgumentMatchers.eq(-6),
+                ArgumentMatchers.eq(66)
+        );
     }
 
     @Test
-    void outOfRangeIntegerGenerateNotice() throws IOException {
+    void outOfRangeIntegerGenerateNotice() {
 
-        final GtfsSpecificationProto.CsvSpecProtos testGtfsSpec = TextFormat.parse(
-                Resources.toString(Resources.getResource("validator_integer_range_test_gtfs_spec.asciipb"),
-                        StandardCharsets.UTF_8),
-                GtfsSpecificationProto.CsvSpecProtos.class
-        );
+        IntegerValidator mockIntegerValidator = mock(IntegerValidator.class);
 
-        GtfsTypeValidator underTest = new GtfsTypeValidator(testGtfsSpec.getCsvspec(0)
+        GtfsSpecificationProto.CsvSpecProto mockFileSpec = mock(GtfsSpecificationProto.CsvSpecProto.class);
+        GtfsSpecificationProto.ColumnSpecProto mockColumnSpec = mock(GtfsSpecificationProto.ColumnSpecProto.class);
+        when(mockColumnSpec.getName()).thenReturn("integer_with_range");
+        when(mockColumnSpec.getIntmin()).thenReturn(-6);
+        when(mockColumnSpec.getIntmax()).thenReturn(66);
+
+        GtfsSpecificationProto.ColumnInputType mockInputType = mock(GtfsSpecificationProto.ColumnInputType.class);
+        when(mockInputType.getType()).thenReturn(GtfsSpecificationProto.ColumnInputType.InputType.INTEGER);
+
+        when(mockColumnSpec.getType()).thenReturn(mockInputType);
+        when(mockFileSpec.getColumnList()).thenReturn(List.of(mockColumnSpec));
+
+        GtfsTypeValidator underTest = new GtfsTypeValidator(mockFileSpec,
+                mock(FloatValidator.class),
+                mockIntegerValidator,
+                mock(UrlValidator.class),
+                mock(RegexValidator.class),
+                mock(RegexValidator.class),
+                Collections.emptySet()
         );
 
         Collection<Notice> result = underTest.validate(new ParsedEntity(
@@ -173,137 +218,196 @@ class GtfsTypeValidatorTest {
         assertEquals("E010", notice.getId());
         assertEquals("Out of range integer value", notice.getTitle());
         assertEquals(TEST_FILE_TST, notice.getFilename());
-        assertEquals("Invalid value for field:integer_with_range of entity with id:test_id -- min:-6 max:66 actual:67",
+        assertEquals("Invalid value for field:integer_with_range of entity with id:test_id -- " +
+                        "min:-6 max:66 actual:67",
                 notice.getDescription());
 
-        result = underTest.validate(new ParsedEntity(
-                TEST_ID,
-                Map.of("integer_with_range", -7),
-                new RawFileInfo.RawFileInfoBuilder().filename(TEST_FILE_TST).build()
-        ));
-
-        assertEquals(1, result.size());
-
-        notice = new ArrayList<>(result).get(0);
-        assertThat(notice, instanceOf(IntegerFieldValueOutOfRangeNotice.class));
-        assertEquals("E010", notice.getId());
-        assertEquals("Out of range integer value", notice.getTitle());
-        assertEquals(TEST_FILE_TST, notice.getFilename());
-        assertEquals("Invalid value for field:integer_with_range of entity with id:test_id -- min:-6 max:66 actual:-7",
-                notice.getDescription());
+        verify(mockIntegerValidator, times(1)).isInRange(
+                ArgumentMatchers.eq(Integer.valueOf(67)),
+                ArgumentMatchers.eq(-6),
+                ArgumentMatchers.eq(66)
+        );
     }
 
     @Test
-    void colorInCorrectFormatDoNotGenerateNotice() throws IOException {
+    void colorInCorrectFormatDoNotGenerateNotice() {
 
-        final GtfsSpecificationProto.CsvSpecProtos testGtfsSpec = TextFormat.parse(
-                Resources.toString(Resources.getResource("validator_color_format_test_gtfs_spec.asciipb"),
-                        StandardCharsets.UTF_8),
-                GtfsSpecificationProto.CsvSpecProtos.class
-        );
+        RegexValidator mockColorValidator = mock(RegexValidator.class);
+        when(mockColorValidator.isValid(ArgumentMatchers.any())).thenReturn(true);
 
-        GtfsTypeValidator underTest = new GtfsTypeValidator(testGtfsSpec.getCsvspec(0)
+        GtfsSpecificationProto.CsvSpecProto mockFileSpec = mock(GtfsSpecificationProto.CsvSpecProto.class);
+        GtfsSpecificationProto.ColumnSpecProto mockColumnSpec = mock(GtfsSpecificationProto.ColumnSpecProto.class);
+        when(mockColumnSpec.getName()).thenReturn("color_with_regex");
+
+        GtfsSpecificationProto.ColumnInputType mockInputType = mock(GtfsSpecificationProto.ColumnInputType.class);
+        when(mockInputType.getType()).thenReturn(GtfsSpecificationProto.ColumnInputType.InputType.COLOR);
+
+        when(mockColumnSpec.getType()).thenReturn(mockInputType);
+        when(mockFileSpec.getColumnList()).thenReturn(List.of(mockColumnSpec));
+
+        GtfsTypeValidator underTest = new GtfsTypeValidator(mockFileSpec,
+                mock(FloatValidator.class),
+                mock(IntegerValidator.class),
+                mock(UrlValidator.class),
+                mockColorValidator,
+                mock(RegexValidator.class),
+                Collections.emptySet()
         );
 
         Collection<Notice> result = underTest.validate(new ParsedEntity(
                 TEST_ID,
-                Map.of("color_with_regex", "ABCDEF"),
+                Map.of("color_with_regex", "FABFAB"),
                 new RawFileInfo.RawFileInfoBuilder().filename(TEST_FILE_TST).build()
         ));
 
         assertEquals(0, result.size());
 
-        result = underTest.validate(new ParsedEntity(
-                TEST_ID,
-                Map.of("color_with_regex", "012345"),
-                new RawFileInfo.RawFileInfoBuilder().filename(TEST_FILE_TST).build()
-        ));
-
-        assertEquals(0, result.size());
-
-        result = underTest.validate(new ParsedEntity(
-                TEST_ID,
-                Map.of("color_with_regex", "6789af"),
-                new RawFileInfo.RawFileInfoBuilder().filename(TEST_FILE_TST).build()
-        ));
-
-        assertEquals(0, result.size());
+        verify(mockColorValidator, times(1)).isValid(ArgumentMatchers.eq("FABFAB"));
     }
 
     @Test
-    void colorInIncorrectFormatGenerateNotice() throws IOException {
+    void colorInIncorrectFormatGenerateNotice() {
 
-        final GtfsSpecificationProto.CsvSpecProtos testGtfsSpec = TextFormat.parse(
-                Resources.toString(Resources.getResource("validator_color_format_test_gtfs_spec.asciipb"),
-                        StandardCharsets.UTF_8),
-                GtfsSpecificationProto.CsvSpecProtos.class
+        RegexValidator mockColorValidator = mock(RegexValidator.class);
+
+        GtfsSpecificationProto.CsvSpecProto mockFileSpec = mock(GtfsSpecificationProto.CsvSpecProto.class);
+        GtfsSpecificationProto.ColumnSpecProto mockColumnSpec = mock(GtfsSpecificationProto.ColumnSpecProto.class);
+        when(mockColumnSpec.getName()).thenReturn("color_with_regex");
+
+        GtfsSpecificationProto.ColumnInputType mockInputType = mock(GtfsSpecificationProto.ColumnInputType.class);
+        when(mockInputType.getType()).thenReturn(GtfsSpecificationProto.ColumnInputType.InputType.COLOR);
+
+        when(mockColumnSpec.getType()).thenReturn(mockInputType);
+        when(mockFileSpec.getColumnList()).thenReturn(List.of(mockColumnSpec));
+
+        GtfsTypeValidator underTest = new GtfsTypeValidator(mockFileSpec,
+                mock(FloatValidator.class),
+                mock(IntegerValidator.class),
+                mock(UrlValidator.class),
+                mockColorValidator,
+                mock(RegexValidator.class),
+                Collections.emptySet()
         );
 
-        GtfsTypeValidator underTest = new GtfsTypeValidator(testGtfsSpec.getCsvspec(0)
-        );
-
-        // incorrect length - too short
         Collection<Notice> result = underTest.validate(new ParsedEntity(
-                TEST_ID,
-                Map.of("color_with_regex", "ABC"),
-                new RawFileInfo.RawFileInfoBuilder().filename(TEST_FILE_TST).build()
-        ));
-
-        assertEquals(1, result.size());
-
-        Notice notice = new ArrayList<>(result).get(0);
-        assertThat(notice, instanceOf(InvalidColorNotice.class));
-        assertEquals("E014", notice.getId());
-        assertEquals("Invalid color", notice.getTitle());
-        assertEquals(TEST_FILE_TST, notice.getFilename());
-        assertEquals("Invalid color:ABC in field:color_with_regex for entity with id:test_id",
-                notice.getDescription());
-
-        // incorrect length - too long
-        result = underTest.validate(new ParsedEntity(
-                TEST_ID,
-                Map.of("color_with_regex", "ABCDEF0"),
-                new RawFileInfo.RawFileInfoBuilder().filename(TEST_FILE_TST).build()
-        ));
-
-        assertEquals(1, result.size());
-
-        notice = new ArrayList<>(result).get(0);
-        assertThat(notice, instanceOf(InvalidColorNotice.class));
-        assertEquals("E014", notice.getId());
-        assertEquals("Invalid color", notice.getTitle());
-        assertEquals(TEST_FILE_TST, notice.getFilename());
-        assertEquals("Invalid color:ABCDEF0 in field:color_with_regex for entity with id:test_id",
-                notice.getDescription());
-
-        // invalid characters
-        result = underTest.validate(new ParsedEntity(
                 TEST_ID,
                 Map.of("color_with_regex", "AZ-FTJ"),
                 new RawFileInfo.RawFileInfoBuilder().filename(TEST_FILE_TST).build()
         ));
 
         assertEquals(1, result.size());
-
-        notice = new ArrayList<>(result).get(0);
+        Notice notice = new ArrayList<>(result).get(0);
         assertThat(notice, instanceOf(InvalidColorNotice.class));
         assertEquals("E014", notice.getId());
         assertEquals("Invalid color", notice.getTitle());
         assertEquals(TEST_FILE_TST, notice.getFilename());
         assertEquals("Invalid color:AZ-FTJ in field:color_with_regex for entity with id:test_id",
                 notice.getDescription());
+
+        verify(mockColorValidator, times(1)).isValid(ArgumentMatchers.eq("AZ-FTJ"));
     }
 
     @Test
-    void urlInCorrectFormatDoNotGenerateNotice() throws IOException {
+    void timeInCorrectFormatDoNotGenerateNotice() {
 
-        final GtfsSpecificationProto.CsvSpecProtos testGtfsSpec = TextFormat.parse(
-                Resources.toString(Resources.getResource("validator_url_format_test_gtfs_spec.asciipb"),
-                        StandardCharsets.UTF_8),
-                GtfsSpecificationProto.CsvSpecProtos.class
+        RegexValidator mockTimeValidator = mock(RegexValidator.class);
+        when(mockTimeValidator.isValid(ArgumentMatchers.any())).thenReturn(true);
+
+        GtfsSpecificationProto.CsvSpecProto mockFileSpec = mock(GtfsSpecificationProto.CsvSpecProto.class);
+        GtfsSpecificationProto.ColumnSpecProto mockColumnSpec = mock(GtfsSpecificationProto.ColumnSpecProto.class);
+        when(mockColumnSpec.getName()).thenReturn("time_with_regex");
+
+        GtfsSpecificationProto.ColumnInputType mockInputType = mock(GtfsSpecificationProto.ColumnInputType.class);
+        when(mockInputType.getType()).thenReturn(GtfsSpecificationProto.ColumnInputType.InputType.TIME);
+
+        when(mockColumnSpec.getType()).thenReturn(mockInputType);
+        when(mockFileSpec.getColumnList()).thenReturn(List.of(mockColumnSpec));
+
+        GtfsTypeValidator underTest = new GtfsTypeValidator(mockFileSpec,
+                mock(FloatValidator.class),
+                mock(IntegerValidator.class),
+                mock(UrlValidator.class),
+                mock(RegexValidator.class),
+                mockTimeValidator,
+                Collections.emptySet()
         );
 
-        GtfsTypeValidator underTest = new GtfsTypeValidator(testGtfsSpec.getCsvspec(0)
+        Collection<Notice> result = underTest.validate(new ParsedEntity(
+                TEST_ID,
+                Map.of("time_with_regex", "01:02:03"),
+                new RawFileInfo.RawFileInfoBuilder().filename(TEST_FILE_TST).build()
+        ));
+
+        assertEquals(0, result.size());
+
+        verify(mockTimeValidator, times(1)).isValid(ArgumentMatchers.eq("01:02:03"));
+    }
+
+    @Test
+    void timeInIncorrectFormatGenerateNotice() {
+
+        RegexValidator mockTimeValidator = mock(RegexValidator.class);
+
+        GtfsSpecificationProto.CsvSpecProto mockFileSpec = mock(GtfsSpecificationProto.CsvSpecProto.class);
+        GtfsSpecificationProto.ColumnSpecProto mockColumnSpec = mock(GtfsSpecificationProto.ColumnSpecProto.class);
+        when(mockColumnSpec.getName()).thenReturn("time_with_regex");
+
+        GtfsSpecificationProto.ColumnInputType mockInputType = mock(GtfsSpecificationProto.ColumnInputType.class);
+        when(mockInputType.getType()).thenReturn(GtfsSpecificationProto.ColumnInputType.InputType.TIME);
+
+        when(mockColumnSpec.getType()).thenReturn(mockInputType);
+        when(mockFileSpec.getColumnList()).thenReturn(List.of(mockColumnSpec));
+
+        GtfsTypeValidator underTest = new GtfsTypeValidator(mockFileSpec,
+                mock(FloatValidator.class),
+                mock(IntegerValidator.class),
+                mock(UrlValidator.class),
+                mock(RegexValidator.class),
+                mockTimeValidator,
+                Collections.emptySet()
+        );
+
+        Collection<Notice> result = underTest.validate(new ParsedEntity(
+                TEST_ID,
+                Map.of("time_with_regex", "001:2:00003"),
+                new RawFileInfo.RawFileInfoBuilder().filename(TEST_FILE_TST).build()
+        ));
+
+        assertEquals(1, result.size());
+        Notice notice = new ArrayList<>(result).get(0);
+        assertThat(notice, instanceOf(InvalidTimeNotice.class));
+        assertEquals("E016", notice.getId());
+        assertEquals("Invalid time", notice.getTitle());
+        assertEquals(TEST_FILE_TST, notice.getFilename());
+        assertEquals("Invalid time:001:2:00003 in field:time_with_regex for entity with id:test_id",
+                notice.getDescription());
+
+        verify(mockTimeValidator, times(1)).isValid(ArgumentMatchers.eq("001:2:00003"));
+    }
+
+    @Test
+    void urlInCorrectFormatDoNotGenerateNotice() {
+
+        UrlValidator mockUrlValidator = mock(UrlValidator.class);
+        when(mockUrlValidator.isValid(ArgumentMatchers.any())).thenReturn(true);
+
+        GtfsSpecificationProto.CsvSpecProto mockFileSpec = mock(GtfsSpecificationProto.CsvSpecProto.class);
+        GtfsSpecificationProto.ColumnSpecProto mockColumnSpec = mock(GtfsSpecificationProto.ColumnSpecProto.class);
+        when(mockColumnSpec.getName()).thenReturn("type_url");
+
+        GtfsSpecificationProto.ColumnInputType mockInputType = mock(GtfsSpecificationProto.ColumnInputType.class);
+        when(mockInputType.getType()).thenReturn(GtfsSpecificationProto.ColumnInputType.InputType.URL);
+
+        when(mockColumnSpec.getType()).thenReturn(mockInputType);
+        when(mockFileSpec.getColumnList()).thenReturn(List.of(mockColumnSpec));
+
+        GtfsTypeValidator underTest = new GtfsTypeValidator(mockFileSpec,
+                mock(FloatValidator.class),
+                mock(IntegerValidator.class),
+                mockUrlValidator,
+                mock(RegexValidator.class),
+                mock(RegexValidator.class),
+                Collections.emptySet()
         );
 
         Collection<Notice> result = underTest.validate(new ParsedEntity(
@@ -314,28 +418,34 @@ class GtfsTypeValidatorTest {
 
         assertEquals(0, result.size());
 
-        result = underTest.validate(new ParsedEntity(
-                TEST_ID,
-                Map.of("type_url", "https://mobilitydata.org"),
-                new RawFileInfo.RawFileInfoBuilder().filename(TEST_FILE_TST).build()
-        ));
-
-        assertEquals(0, result.size());
+        verify(mockUrlValidator, times(1)).isValid(
+                ArgumentMatchers.eq("http://mobilitydata.org"));
     }
 
     @Test
-    void urlInInCorrectFormatGenerateNotice() throws IOException {
+    void urlInInCorrectFormatGenerateNotice() {
 
-        final GtfsSpecificationProto.CsvSpecProtos testGtfsSpec = TextFormat.parse(
-                Resources.toString(Resources.getResource("validator_url_format_test_gtfs_spec.asciipb"),
-                        StandardCharsets.UTF_8),
-                GtfsSpecificationProto.CsvSpecProtos.class
+        UrlValidator mockUrlValidator = mock(UrlValidator.class);
+
+        GtfsSpecificationProto.CsvSpecProto mockFileSpec = mock(GtfsSpecificationProto.CsvSpecProto.class);
+        GtfsSpecificationProto.ColumnSpecProto mockColumnSpec = mock(GtfsSpecificationProto.ColumnSpecProto.class);
+        when(mockColumnSpec.getName()).thenReturn("type_url");
+
+        GtfsSpecificationProto.ColumnInputType mockInputType = mock(GtfsSpecificationProto.ColumnInputType.class);
+        when(mockInputType.getType()).thenReturn(GtfsSpecificationProto.ColumnInputType.InputType.URL);
+
+        when(mockColumnSpec.getType()).thenReturn(mockInputType);
+        when(mockFileSpec.getColumnList()).thenReturn(List.of(mockColumnSpec));
+
+        GtfsTypeValidator underTest = new GtfsTypeValidator(mockFileSpec,
+                mock(FloatValidator.class),
+                mock(IntegerValidator.class),
+                mockUrlValidator,
+                mock(RegexValidator.class),
+                mock(RegexValidator.class),
+                Collections.emptySet()
         );
 
-        GtfsTypeValidator underTest = new GtfsTypeValidator(testGtfsSpec.getCsvspec(0)
-        );
-
-        // invalid scheme
         Collection<Notice> result = underTest.validate(new ParsedEntity(
                 TEST_ID,
                 Map.of("type_url", "ftp://mobilitydata.org"),
@@ -343,7 +453,6 @@ class GtfsTypeValidatorTest {
         ));
 
         assertEquals(1, result.size());
-
         Notice notice = new ArrayList<>(result).get(0);
         assertThat(notice, instanceOf(InvalidUrlNotice.class));
         assertEquals("E012", notice.getId());
@@ -352,37 +461,30 @@ class GtfsTypeValidatorTest {
         assertEquals("Invalid url:ftp://mobilitydata.org in field:type_url for entity with id:test_id",
                 notice.getDescription());
 
-
-        // any malformed
-
-        // invalid scheme
-        result = underTest.validate(new ParsedEntity(
-                TEST_ID,
-                Map.of("type_url", "http://mobilitydataorg"),
-                new RawFileInfo.RawFileInfoBuilder().filename(TEST_FILE_TST).build()
-        ));
-
-        assertEquals(1, result.size());
-
-        notice = new ArrayList<>(result).get(0);
-        assertThat(notice, instanceOf(InvalidUrlNotice.class));
-        assertEquals("E012", notice.getId());
-        assertEquals("Invalid url", notice.getTitle());
-        assertEquals(TEST_FILE_TST, notice.getFilename());
-        assertEquals("Invalid url:http://mobilitydataorg in field:type_url for entity with id:test_id",
-                notice.getDescription());
+        verify(mockUrlValidator, times(1)).isValid(
+                ArgumentMatchers.eq("ftp://mobilitydata.org"));
     }
 
     @Test
-    void timezoneValidDoNotGenerateNotice() throws IOException {
+    void timezoneValidDoNotGenerateNotice() {
 
-        final GtfsSpecificationProto.CsvSpecProtos testGtfsSpec = TextFormat.parse(
-                Resources.toString(Resources.getResource("validator_timezone_test_gtfs_spec.asciipb"),
-                        StandardCharsets.UTF_8),
-                GtfsSpecificationProto.CsvSpecProtos.class
-        );
+        GtfsSpecificationProto.CsvSpecProto mockFileSpec = mock(GtfsSpecificationProto.CsvSpecProto.class);
+        GtfsSpecificationProto.ColumnSpecProto mockColumnSpec = mock(GtfsSpecificationProto.ColumnSpecProto.class);
+        when(mockColumnSpec.getName()).thenReturn("type_timezone");
 
-        GtfsTypeValidator underTest = new GtfsTypeValidator(testGtfsSpec.getCsvspec(0)
+        GtfsSpecificationProto.ColumnInputType mockInputType = mock(GtfsSpecificationProto.ColumnInputType.class);
+        when(mockInputType.getType()).thenReturn(GtfsSpecificationProto.ColumnInputType.InputType.TIMEZONE);
+
+        when(mockColumnSpec.getType()).thenReturn(mockInputType);
+        when(mockFileSpec.getColumnList()).thenReturn(List.of(mockColumnSpec));
+
+        GtfsTypeValidator underTest = new GtfsTypeValidator(mockFileSpec,
+                mock(FloatValidator.class),
+                mock(IntegerValidator.class),
+                mock(UrlValidator.class),
+                mock(RegexValidator.class),
+                mock(RegexValidator.class),
+                Set.of("America/Montreal")
         );
 
         Collection<Notice> result = underTest.validate(new ParsedEntity(
@@ -395,18 +497,27 @@ class GtfsTypeValidatorTest {
     }
 
     @Test
-    void timezoneInvalidGenerateNotice() throws IOException {
+    void timezoneInvalidGenerateNotice() {
 
-        final GtfsSpecificationProto.CsvSpecProtos testGtfsSpec = TextFormat.parse(
-                Resources.toString(Resources.getResource("validator_timezone_test_gtfs_spec.asciipb"),
-                        StandardCharsets.UTF_8),
-                GtfsSpecificationProto.CsvSpecProtos.class
+        GtfsSpecificationProto.CsvSpecProto mockFileSpec = mock(GtfsSpecificationProto.CsvSpecProto.class);
+        GtfsSpecificationProto.ColumnSpecProto mockColumnSpec = mock(GtfsSpecificationProto.ColumnSpecProto.class);
+        when(mockColumnSpec.getName()).thenReturn("type_timezone");
+
+        GtfsSpecificationProto.ColumnInputType mockInputType = mock(GtfsSpecificationProto.ColumnInputType.class);
+        when(mockInputType.getType()).thenReturn(GtfsSpecificationProto.ColumnInputType.InputType.TIMEZONE);
+
+        when(mockColumnSpec.getType()).thenReturn(mockInputType);
+        when(mockFileSpec.getColumnList()).thenReturn(List.of(mockColumnSpec));
+
+        GtfsTypeValidator underTest = new GtfsTypeValidator(mockFileSpec,
+                mock(FloatValidator.class),
+                mock(IntegerValidator.class),
+                mock(UrlValidator.class),
+                mock(RegexValidator.class),
+                mock(RegexValidator.class),
+                Collections.emptySet()
         );
 
-        GtfsTypeValidator underTest = new GtfsTypeValidator(testGtfsSpec.getCsvspec(0)
-        );
-
-        // any non parsable
         Collection<Notice> result = underTest.validate(new ParsedEntity(
                 TEST_ID,
                 Map.of("type_timezone", "abc"),
@@ -425,15 +536,25 @@ class GtfsTypeValidatorTest {
     }
 
     @Test
-    void idAsciiDoNotGenerateNotice() throws IOException {
+    void idAsciiDoNotGenerateNotice() {
 
-        final GtfsSpecificationProto.CsvSpecProtos testGtfsSpec = TextFormat.parse(
-                Resources.toString(Resources.getResource("validator_id_test_gtfs_spec.asciipb"),
-                        StandardCharsets.UTF_8),
-                GtfsSpecificationProto.CsvSpecProtos.class
-        );
+        GtfsSpecificationProto.CsvSpecProto mockFileSpec = mock(GtfsSpecificationProto.CsvSpecProto.class);
+        GtfsSpecificationProto.ColumnSpecProto mockColumnSpec = mock(GtfsSpecificationProto.ColumnSpecProto.class);
+        when(mockColumnSpec.getName()).thenReturn("type_id");
 
-        GtfsTypeValidator underTest = new GtfsTypeValidator(testGtfsSpec.getCsvspec(0)
+        GtfsSpecificationProto.ColumnInputType mockInputType = mock(GtfsSpecificationProto.ColumnInputType.class);
+        when(mockInputType.getType()).thenReturn(GtfsSpecificationProto.ColumnInputType.InputType.ID);
+
+        when(mockColumnSpec.getType()).thenReturn(mockInputType);
+        when(mockFileSpec.getColumnList()).thenReturn(List.of(mockColumnSpec));
+
+        GtfsTypeValidator underTest = new GtfsTypeValidator(mockFileSpec,
+                mock(FloatValidator.class),
+                mock(IntegerValidator.class),
+                mock(UrlValidator.class),
+                mock(RegexValidator.class),
+                mock(RegexValidator.class),
+                Collections.emptySet()
         );
 
         Collection<Notice> result = underTest.validate(new ParsedEntity(
@@ -446,15 +567,25 @@ class GtfsTypeValidatorTest {
     }
 
     @Test
-    void idNonAsciiGenerateNotice() throws IOException {
+    void idNonAsciiGenerateNotice() {
 
-        final GtfsSpecificationProto.CsvSpecProtos testGtfsSpec = TextFormat.parse(
-                Resources.toString(Resources.getResource("validator_id_test_gtfs_spec.asciipb"),
-                        StandardCharsets.UTF_8),
-                GtfsSpecificationProto.CsvSpecProtos.class
-        );
+        GtfsSpecificationProto.CsvSpecProto mockFileSpec = mock(GtfsSpecificationProto.CsvSpecProto.class);
+        GtfsSpecificationProto.ColumnSpecProto mockColumnSpec = mock(GtfsSpecificationProto.ColumnSpecProto.class);
+        when(mockColumnSpec.getName()).thenReturn("type_id");
 
-        GtfsTypeValidator underTest = new GtfsTypeValidator(testGtfsSpec.getCsvspec(0)
+        GtfsSpecificationProto.ColumnInputType mockInputType = mock(GtfsSpecificationProto.ColumnInputType.class);
+        when(mockInputType.getType()).thenReturn(GtfsSpecificationProto.ColumnInputType.InputType.ID);
+
+        when(mockColumnSpec.getType()).thenReturn(mockInputType);
+        when(mockFileSpec.getColumnList()).thenReturn(List.of(mockColumnSpec));
+
+        GtfsTypeValidator underTest = new GtfsTypeValidator(mockFileSpec,
+                mock(FloatValidator.class),
+                mock(IntegerValidator.class),
+                mock(UrlValidator.class),
+                mock(RegexValidator.class),
+                mock(RegexValidator.class),
+                Collections.emptySet()
         );
 
         // contains non ASCII
@@ -473,10 +604,32 @@ class GtfsTypeValidatorTest {
         assertEquals(TEST_FILE_TST, notice.getFilename());
         assertEquals("Non ascii or non printable character(s) in:abçé in field:type_id for entity with id:test_id",
                 notice.getDescription());
+    }
 
+    @Test
+    void idNonPrintableAsciiGenerateNotice() {
+
+        GtfsSpecificationProto.CsvSpecProto mockFileSpec = mock(GtfsSpecificationProto.CsvSpecProto.class);
+        GtfsSpecificationProto.ColumnSpecProto mockColumnSpec = mock(GtfsSpecificationProto.ColumnSpecProto.class);
+        when(mockColumnSpec.getName()).thenReturn("type_id");
+
+        GtfsSpecificationProto.ColumnInputType mockInputType = mock(GtfsSpecificationProto.ColumnInputType.class);
+        when(mockInputType.getType()).thenReturn(GtfsSpecificationProto.ColumnInputType.InputType.ID);
+
+        when(mockColumnSpec.getType()).thenReturn(mockInputType);
+        when(mockFileSpec.getColumnList()).thenReturn(List.of(mockColumnSpec));
+
+        GtfsTypeValidator underTest = new GtfsTypeValidator(mockFileSpec,
+                mock(FloatValidator.class),
+                mock(IntegerValidator.class),
+                mock(UrlValidator.class),
+                mock(RegexValidator.class),
+                mock(RegexValidator.class),
+                Collections.emptySet()
+        );
 
         // contains non printable ASCII
-        result = underTest.validate(new ParsedEntity(
+        Collection<Notice> result = underTest.validate(new ParsedEntity(
                 TEST_ID,
                 Map.of("type_id", "ab\u0003"),
                 new RawFileInfo.RawFileInfoBuilder().filename(TEST_FILE_TST).build()
@@ -484,7 +637,7 @@ class GtfsTypeValidatorTest {
 
         assertEquals(1, result.size());
 
-        notice = new ArrayList<>(result).get(0);
+        Notice notice = new ArrayList<>(result).get(0);
         assertThat(notice, instanceOf(NonAsciiOrNonPrintableCharNotice.class));
         assertEquals("W003", notice.getId());
         assertEquals("Suspicious id", notice.getTitle());
@@ -495,81 +648,227 @@ class GtfsTypeValidatorTest {
     }
 
     @Test
-    void nullOrEmptyOptionalValueDoNotGenerateError() throws IOException {
+    void nullOrEmptyOptionalValueDoNotGenerateError() {
 
-        final GtfsSpecificationProto.CsvSpecProtos testGtfsSpec = TextFormat.parse(
-                Resources.toString(Resources.getResource("validator_required_field_value_test_gtfs_spec.asciipb"),
-                        StandardCharsets.UTF_8),
-                GtfsSpecificationProto.CsvSpecProtos.class
+        GtfsSpecificationProto.CsvSpecProto mockFileSpec = mock(GtfsSpecificationProto.CsvSpecProto.class);
+
+        GtfsSpecificationProto.ColumnSpecProto mockUnspecifiedColumnSpec =
+                mock(GtfsSpecificationProto.ColumnSpecProto.class);
+        GtfsSpecificationProto.ColumnInputType mockUnspecifiedInputType =
+                mock(GtfsSpecificationProto.ColumnInputType.class);
+        when(mockUnspecifiedInputType.getType())
+                .thenReturn(GtfsSpecificationProto.ColumnInputType.InputType.INPUT_TYPE_UNSPECIFIED);
+        when(mockUnspecifiedColumnSpec.getType()).thenReturn(mockUnspecifiedInputType);
+
+        GtfsSpecificationProto.ColumnSpecProto mockTextColumnSpec = mock(GtfsSpecificationProto.ColumnSpecProto.class);
+        GtfsSpecificationProto.ColumnInputType mockTextInputType = mock(GtfsSpecificationProto.ColumnInputType.class);
+        when(mockTextInputType.getType()).thenReturn(GtfsSpecificationProto.ColumnInputType.InputType.TEXT);
+        when(mockTextColumnSpec.getType()).thenReturn(mockTextInputType);
+
+        GtfsSpecificationProto.ColumnSpecProto mockFloatColumnSpec = mock(GtfsSpecificationProto.ColumnSpecProto.class);
+        GtfsSpecificationProto.ColumnInputType mockFloatInputType = mock(GtfsSpecificationProto.ColumnInputType.class);
+        when(mockFloatInputType.getType()).thenReturn(GtfsSpecificationProto.ColumnInputType.InputType.FLOAT);
+        when(mockFloatColumnSpec.getType()).thenReturn(mockFloatInputType);
+
+        GtfsSpecificationProto.ColumnSpecProto mockIntegerColumnSpec =
+                mock(GtfsSpecificationProto.ColumnSpecProto.class);
+        GtfsSpecificationProto.ColumnInputType mockIntegerInputType =
+                mock(GtfsSpecificationProto.ColumnInputType.class);
+        when(mockIntegerInputType.getType()).thenReturn(GtfsSpecificationProto.ColumnInputType.InputType.INTEGER);
+        when(mockIntegerColumnSpec.getType()).thenReturn(mockIntegerInputType);
+
+        GtfsSpecificationProto.ColumnSpecProto mockColorColumnSpec = mock(GtfsSpecificationProto.ColumnSpecProto.class);
+        GtfsSpecificationProto.ColumnInputType mockColorInputType = mock(GtfsSpecificationProto.ColumnInputType.class);
+        when(mockColorInputType.getType()).thenReturn(GtfsSpecificationProto.ColumnInputType.InputType.COLOR);
+        when(mockColorColumnSpec.getType()).thenReturn(mockColorInputType);
+
+        GtfsSpecificationProto.ColumnSpecProto mockTimezoneColumnSpec =
+                mock(GtfsSpecificationProto.ColumnSpecProto.class);
+        GtfsSpecificationProto.ColumnInputType mockTimezoneInputType =
+                mock(GtfsSpecificationProto.ColumnInputType.class);
+        when(mockTimezoneInputType.getType()).thenReturn(GtfsSpecificationProto.ColumnInputType.InputType.TIMEZONE);
+        when(mockTimezoneColumnSpec.getType()).thenReturn(mockTimezoneInputType);
+
+        GtfsSpecificationProto.ColumnSpecProto mockIdColumnSpec = mock(GtfsSpecificationProto.ColumnSpecProto.class);
+        GtfsSpecificationProto.ColumnInputType mockIdInputType = mock(GtfsSpecificationProto.ColumnInputType.class);
+        when(mockIdInputType.getType()).thenReturn(GtfsSpecificationProto.ColumnInputType.InputType.ID);
+        when(mockIdColumnSpec.getType()).thenReturn(mockIdInputType);
+
+        GtfsSpecificationProto.ColumnSpecProto mockUrlColumnSpec = mock(GtfsSpecificationProto.ColumnSpecProto.class);
+        GtfsSpecificationProto.ColumnInputType mockUrlInputType = mock(GtfsSpecificationProto.ColumnInputType.class);
+        when(mockUrlInputType.getType()).thenReturn(GtfsSpecificationProto.ColumnInputType.InputType.URL);
+        when(mockUrlColumnSpec.getType()).thenReturn(mockUrlInputType);
+
+        GtfsSpecificationProto.ColumnSpecProto mockTimeColumnSpec = mock(GtfsSpecificationProto.ColumnSpecProto.class);
+        GtfsSpecificationProto.ColumnInputType mockTimeInputType = mock(GtfsSpecificationProto.ColumnInputType.class);
+        when(mockTimeInputType.getType()).thenReturn(GtfsSpecificationProto.ColumnInputType.InputType.TIME);
+        when(mockTimeColumnSpec.getType()).thenReturn(mockTimeInputType);
+
+        GtfsSpecificationProto.ColumnSpecProto mockDateColumnSpec = mock(GtfsSpecificationProto.ColumnSpecProto.class);
+        GtfsSpecificationProto.ColumnInputType mockDateInputType = mock(GtfsSpecificationProto.ColumnInputType.class);
+        when(mockDateInputType.getType()).thenReturn(GtfsSpecificationProto.ColumnInputType.InputType.DATE);
+        when(mockDateColumnSpec.getType()).thenReturn(mockDateInputType);
+
+        when(mockFileSpec.getColumnList()).thenReturn(List.of(mockUnspecifiedColumnSpec,
+                mockTextColumnSpec,
+                mockFloatColumnSpec,
+                mockIntegerColumnSpec,
+                mockColorColumnSpec,
+                mockTimezoneColumnSpec,
+                mockIdColumnSpec,
+                mockUrlColumnSpec,
+                mockTimeColumnSpec,
+                mockDateColumnSpec));
+
+        GtfsTypeValidator underTest = new GtfsTypeValidator(mockFileSpec,
+                mock(FloatValidator.class),
+                mock(IntegerValidator.class),
+                mock(UrlValidator.class),
+                mock(RegexValidator.class),
+                mock(RegexValidator.class),
+                Collections.emptySet()
         );
 
-        GtfsTypeValidator underTest = new GtfsTypeValidator(testGtfsSpec.getCsvspec(0)
-        );
-
-        // empty optional values
         Collection<Notice> result = underTest.validate(new ParsedEntity(
                 TEST_ID,
-                Map.of("float_required_test", 0.0f,
-                        "integer_required_test", 0,
-                        "color_optional_test", "",
-                        "color_required_test", "ABCDEF",
-                        "unspecified_optional_test", "",
-                        "unspecified_required_test", "a_string",
-                        "text_optional_test", "",
-                        "text_required_test", "a_string"),
+                Collections.emptyMap(),
                 new RawFileInfo.RawFileInfoBuilder().filename(TEST_FILE_TST).build()
         ));
 
         assertEquals(0, result.size());
-
-        // null optional values
-        result = underTest.validate(new ParsedEntity(
-                TEST_ID,
-                Map.of("float_required_test", 0.0f,
-                        "integer_required_test", 0,
-                        "color_required_test", "ABCDEF",
-                        "unspecified_required_test", "a_string",
-                        "text_required_test", "a_string"),
-                new RawFileInfo.RawFileInfoBuilder().filename(TEST_FILE_TST).build()
-        ));
-
-        assertEquals(0, result.size());
+        //noinspection ResultOfMethodCallIgnored
+        verify(mockFileSpec, times(1)).getColumnList();
+        verify(mockUnspecifiedColumnSpec, times(1)).getName();
+        verify(mockTextColumnSpec, times(1)).getName();
+        verify(mockFloatColumnSpec, times(1)).getName();
+        verify(mockIntegerColumnSpec, times(1)).getName();
+        verify(mockColorColumnSpec, times(1)).getName();
+        verify(mockTimezoneColumnSpec, times(1)).getName();
+        verify(mockIdColumnSpec, times(1)).getName();
+        verify(mockUrlColumnSpec, times(1)).getName();
+        verify(mockTimeColumnSpec, times(1)).getName();
+        verify(mockDateColumnSpec, times(1)).getName();
     }
 
     @Test
-    void nullOrEmptyRequiredValueGenerateError() throws IOException {
+    void nullRequiredValueGenerateError() {
 
-        final GtfsSpecificationProto.CsvSpecProtos testGtfsSpec = TextFormat.parse(
-                Resources.toString(Resources.getResource("validator_required_field_value_test_gtfs_spec.asciipb"),
-                        StandardCharsets.UTF_8),
-                GtfsSpecificationProto.CsvSpecProtos.class
+        GtfsSpecificationProto.CsvSpecProto mockFileSpec = mock(GtfsSpecificationProto.CsvSpecProto.class);
+        //GtfsSpecificationProto.ColumnSpecProto mockColumnSpec = mock(GtfsSpecificationProto.ColumnSpecProto.class);
+        //when(mockColumnSpec.getName()).thenReturn("type_id");
+        //when(mockColumnSpec.getValueRequired()).thenReturn(true);
+
+        GtfsSpecificationProto.ColumnSpecProto mockUnspecifiedColumnSpec =
+                mock(GtfsSpecificationProto.ColumnSpecProto.class);
+        GtfsSpecificationProto.ColumnInputType mockUnspecifiedInputType =
+                mock(GtfsSpecificationProto.ColumnInputType.class);
+        when(mockUnspecifiedInputType.getType())
+                .thenReturn(GtfsSpecificationProto.ColumnInputType.InputType.INPUT_TYPE_UNSPECIFIED);
+        when(mockUnspecifiedColumnSpec.getType()).thenReturn(mockUnspecifiedInputType);
+        when(mockUnspecifiedColumnSpec.getName()).thenReturn("type_unspecified");
+        when(mockUnspecifiedColumnSpec.getValueRequired()).thenReturn(true);
+
+        GtfsSpecificationProto.ColumnSpecProto mockTextColumnSpec = mock(GtfsSpecificationProto.ColumnSpecProto.class);
+        GtfsSpecificationProto.ColumnInputType mockTextInputType = mock(GtfsSpecificationProto.ColumnInputType.class);
+        when(mockTextInputType.getType()).thenReturn(GtfsSpecificationProto.ColumnInputType.InputType.TEXT);
+        when(mockTextColumnSpec.getType()).thenReturn(mockTextInputType);
+        when(mockTextColumnSpec.getName()).thenReturn("type_text");
+        when(mockTextColumnSpec.getValueRequired()).thenReturn(true);
+
+        GtfsSpecificationProto.ColumnSpecProto mockFloatColumnSpec = mock(GtfsSpecificationProto.ColumnSpecProto.class);
+        GtfsSpecificationProto.ColumnInputType mockFloatInputType = mock(GtfsSpecificationProto.ColumnInputType.class);
+        when(mockFloatInputType.getType()).thenReturn(GtfsSpecificationProto.ColumnInputType.InputType.FLOAT);
+        when(mockFloatColumnSpec.getType()).thenReturn(mockFloatInputType);
+        when(mockFloatColumnSpec.getName()).thenReturn("type_float");
+        when(mockFloatColumnSpec.getValueRequired()).thenReturn(true);
+
+        GtfsSpecificationProto.ColumnSpecProto mockIntegerColumnSpec =
+                mock(GtfsSpecificationProto.ColumnSpecProto.class);
+        GtfsSpecificationProto.ColumnInputType mockIntegerInputType =
+                mock(GtfsSpecificationProto.ColumnInputType.class);
+        when(mockIntegerInputType.getType()).thenReturn(GtfsSpecificationProto.ColumnInputType.InputType.INTEGER);
+        when(mockIntegerColumnSpec.getType()).thenReturn(mockIntegerInputType);
+        when(mockIntegerColumnSpec.getName()).thenReturn("type_integer");
+        when(mockIntegerColumnSpec.getValueRequired()).thenReturn(true);
+
+        GtfsSpecificationProto.ColumnSpecProto mockColorColumnSpec = mock(GtfsSpecificationProto.ColumnSpecProto.class);
+        GtfsSpecificationProto.ColumnInputType mockColorInputType = mock(GtfsSpecificationProto.ColumnInputType.class);
+        when(mockColorInputType.getType()).thenReturn(GtfsSpecificationProto.ColumnInputType.InputType.COLOR);
+        when(mockColorColumnSpec.getType()).thenReturn(mockColorInputType);
+        when(mockColorColumnSpec.getName()).thenReturn("type_color");
+        when(mockColorColumnSpec.getValueRequired()).thenReturn(true);
+
+        GtfsSpecificationProto.ColumnSpecProto mockTimezoneColumnSpec =
+                mock(GtfsSpecificationProto.ColumnSpecProto.class);
+        GtfsSpecificationProto.ColumnInputType mockTimezoneInputType =
+                mock(GtfsSpecificationProto.ColumnInputType.class);
+        when(mockTimezoneInputType.getType()).thenReturn(GtfsSpecificationProto.ColumnInputType.InputType.TIMEZONE);
+        when(mockTimezoneColumnSpec.getType()).thenReturn(mockTimezoneInputType);
+        when(mockTimezoneColumnSpec.getName()).thenReturn("type_timezone");
+        when(mockTimezoneColumnSpec.getValueRequired()).thenReturn(true);
+
+        GtfsSpecificationProto.ColumnSpecProto mockIdColumnSpec = mock(GtfsSpecificationProto.ColumnSpecProto.class);
+        GtfsSpecificationProto.ColumnInputType mockIdInputType = mock(GtfsSpecificationProto.ColumnInputType.class);
+        when(mockIdInputType.getType()).thenReturn(GtfsSpecificationProto.ColumnInputType.InputType.ID);
+        when(mockIdColumnSpec.getType()).thenReturn(mockIdInputType);
+        when(mockIdColumnSpec.getName()).thenReturn("type_id");
+        when(mockIdColumnSpec.getValueRequired()).thenReturn(true);
+
+        GtfsSpecificationProto.ColumnSpecProto mockUrlColumnSpec = mock(GtfsSpecificationProto.ColumnSpecProto.class);
+        GtfsSpecificationProto.ColumnInputType mockUrlInputType = mock(GtfsSpecificationProto.ColumnInputType.class);
+        when(mockUrlInputType.getType()).thenReturn(GtfsSpecificationProto.ColumnInputType.InputType.URL);
+        when(mockUrlColumnSpec.getType()).thenReturn(mockUrlInputType);
+        when(mockUrlColumnSpec.getName()).thenReturn("type_url");
+        when(mockUrlColumnSpec.getValueRequired()).thenReturn(true);
+
+        GtfsSpecificationProto.ColumnSpecProto mockTimeColumnSpec = mock(GtfsSpecificationProto.ColumnSpecProto.class);
+        GtfsSpecificationProto.ColumnInputType mockTimeInputType = mock(GtfsSpecificationProto.ColumnInputType.class);
+        when(mockTimeInputType.getType()).thenReturn(GtfsSpecificationProto.ColumnInputType.InputType.TIME);
+        when(mockTimeColumnSpec.getType()).thenReturn(mockTimeInputType);
+        when(mockTimeColumnSpec.getName()).thenReturn("type_time");
+        when(mockTimeColumnSpec.getValueRequired()).thenReturn(true);
+
+        GtfsSpecificationProto.ColumnSpecProto mockDateColumnSpec = mock(GtfsSpecificationProto.ColumnSpecProto.class);
+        GtfsSpecificationProto.ColumnInputType mockDateInputType = mock(GtfsSpecificationProto.ColumnInputType.class);
+        when(mockDateInputType.getType()).thenReturn(GtfsSpecificationProto.ColumnInputType.InputType.DATE);
+        when(mockDateColumnSpec.getType()).thenReturn(mockDateInputType);
+        when(mockDateColumnSpec.getName()).thenReturn("type_date");
+        when(mockDateColumnSpec.getValueRequired()).thenReturn(true);
+
+        when(mockFileSpec.getColumnList()).thenReturn(List.of(mockUnspecifiedColumnSpec,
+                mockTextColumnSpec,
+                mockFloatColumnSpec,
+                mockIntegerColumnSpec,
+                mockColorColumnSpec,
+                mockTimezoneColumnSpec,
+                mockIdColumnSpec,
+                mockUrlColumnSpec,
+                mockTimeColumnSpec,
+                mockDateColumnSpec));
+
+        GtfsTypeValidator underTest = new GtfsTypeValidator(mockFileSpec,
+                mock(FloatValidator.class),
+                mock(IntegerValidator.class),
+                mock(UrlValidator.class),
+                mock(RegexValidator.class),
+                mock(RegexValidator.class),
+                Collections.emptySet()
         );
 
-        GtfsTypeValidator underTest = new GtfsTypeValidator(testGtfsSpec.getCsvspec(0)
-        );
-
-        // empty required values
         Collection<Notice> result = underTest.validate(new ParsedEntity(
                 TEST_ID,
-                Map.of("float_optional_test", "",
-                        "integer_optional_test", "",
-                        "color_optional_test", "",
-                        "color_required_test", "",
-                        "unspecified_optional_test", "",
-                        "unspecified_required_test", "",
-                        "text_optional_test", "",
-                        "text_required_test", ""),
+                Collections.emptyMap(),
                 new RawFileInfo.RawFileInfoBuilder().filename(TEST_FILE_TST).build()
         ));
 
-        assertEquals(5, result.size());
+        assertEquals(10, result.size());
 
         Notice notice = new ArrayList<>(result).get(0);
         assertThat(notice, instanceOf(MissingRequiredValueNotice.class));
         assertEquals("E015", notice.getId());
         assertEquals("Missing required value", notice.getTitle());
         assertEquals(TEST_FILE_TST, notice.getFilename());
-        assertEquals("Missing value for field:float_required_test marked as required in entity with id:test_id",
+        assertEquals("Missing value for field:type_unspecified marked as required in entity with id:test_id",
                 notice.getDescription());
 
         notice = new ArrayList<>(result).get(1);
@@ -577,7 +876,7 @@ class GtfsTypeValidatorTest {
         assertEquals("E015", notice.getId());
         assertEquals("Missing required value", notice.getTitle());
         assertEquals(TEST_FILE_TST, notice.getFilename());
-        assertEquals("Missing value for field:integer_required_test marked as required in entity with id:test_id",
+        assertEquals("Missing value for field:type_text marked as required in entity with id:test_id",
                 notice.getDescription());
 
         notice = new ArrayList<>(result).get(2);
@@ -585,7 +884,7 @@ class GtfsTypeValidatorTest {
         assertEquals("E015", notice.getId());
         assertEquals("Missing required value", notice.getTitle());
         assertEquals(TEST_FILE_TST, notice.getFilename());
-        assertEquals("Missing value for field:color_required_test marked as required in entity with id:test_id",
+        assertEquals("Missing value for field:type_float marked as required in entity with id:test_id",
                 notice.getDescription());
 
         notice = new ArrayList<>(result).get(3);
@@ -593,7 +892,7 @@ class GtfsTypeValidatorTest {
         assertEquals("E015", notice.getId());
         assertEquals("Missing required value", notice.getTitle());
         assertEquals(TEST_FILE_TST, notice.getFilename());
-        assertEquals("Missing value for field:unspecified_required_test marked as required in entity with id:test_id",
+        assertEquals("Missing value for field:type_integer marked as required in entity with id:test_id",
                 notice.getDescription());
 
         notice = new ArrayList<>(result).get(4);
@@ -601,81 +900,273 @@ class GtfsTypeValidatorTest {
         assertEquals("E015", notice.getId());
         assertEquals("Missing required value", notice.getTitle());
         assertEquals(TEST_FILE_TST, notice.getFilename());
-        assertEquals("Missing value for field:text_required_test marked as required in entity with id:test_id",
+        assertEquals("Missing value for field:type_color marked as required in entity with id:test_id",
                 notice.getDescription());
 
-        // null required values
-        result = underTest.validate(new ParsedEntity(
-                TEST_ID,
-                Map.of("float_optional_test", "",
-                        "integer_optional_test", "",
-                        "color_optional_test", "",
-                        "unspecified_optional_test", "",
-                        "text_optional_test", ""),
-                new RawFileInfo.RawFileInfoBuilder().filename(TEST_FILE_TST).build()
-        ));
-
-        assertEquals(5, result.size());
-
-        notice = new ArrayList<>(result).get(0);
+        notice = new ArrayList<>(result).get(5);
         assertThat(notice, instanceOf(MissingRequiredValueNotice.class));
         assertEquals("E015", notice.getId());
         assertEquals("Missing required value", notice.getTitle());
         assertEquals(TEST_FILE_TST, notice.getFilename());
-        assertEquals("Missing value for field:float_required_test marked as required in entity with id:test_id",
+        assertEquals("Missing value for field:type_timezone marked as required in entity with id:test_id",
                 notice.getDescription());
 
-        notice = new ArrayList<>(result).get(1);
+        notice = new ArrayList<>(result).get(6);
         assertThat(notice, instanceOf(MissingRequiredValueNotice.class));
         assertEquals("E015", notice.getId());
         assertEquals("Missing required value", notice.getTitle());
         assertEquals(TEST_FILE_TST, notice.getFilename());
-        assertEquals("Missing value for field:integer_required_test marked as required in entity with id:test_id",
+        assertEquals("Missing value for field:type_id marked as required in entity with id:test_id",
                 notice.getDescription());
 
-        notice = new ArrayList<>(result).get(2);
+        notice = new ArrayList<>(result).get(7);
         assertThat(notice, instanceOf(MissingRequiredValueNotice.class));
         assertEquals("E015", notice.getId());
         assertEquals("Missing required value", notice.getTitle());
         assertEquals(TEST_FILE_TST, notice.getFilename());
-        assertEquals("Missing value for field:color_required_test marked as required in entity with id:test_id",
+        assertEquals("Missing value for field:type_url marked as required in entity with id:test_id",
                 notice.getDescription());
 
-        notice = new ArrayList<>(result).get(3);
+        notice = new ArrayList<>(result).get(8);
         assertThat(notice, instanceOf(MissingRequiredValueNotice.class));
         assertEquals("E015", notice.getId());
         assertEquals("Missing required value", notice.getTitle());
         assertEquals(TEST_FILE_TST, notice.getFilename());
-        assertEquals(
-                "Missing value for field:unspecified_required_test marked as required in entity with id:test_id",
+        assertEquals("Missing value for field:type_time marked as required in entity with id:test_id",
                 notice.getDescription());
 
-        notice = new ArrayList<>(result).get(4);
+        notice = new ArrayList<>(result).get(9);
         assertThat(notice, instanceOf(MissingRequiredValueNotice.class));
         assertEquals("E015", notice.getId());
         assertEquals("Missing required value", notice.getTitle());
         assertEquals(TEST_FILE_TST, notice.getFilename());
-        assertEquals("Missing value for field:text_required_test marked as required in entity with id:test_id",
+        assertEquals("Missing value for field:type_date marked as required in entity with id:test_id",
                 notice.getDescription());
-
-
     }
 
     @Test
-    void dateTypeIsUnsupported() throws IOException {
+    void emptyRequiredValueGenerateError() {
 
-        final GtfsSpecificationProto.CsvSpecProtos testGtfsSpec = TextFormat.parse(
-                Resources.toString(Resources.getResource("validator_date_test_gtfs_spec.asciipb"),
-                        StandardCharsets.UTF_8),
-                GtfsSpecificationProto.CsvSpecProtos.class
-        );
+        GtfsSpecificationProto.CsvSpecProto mockFileSpec = mock(GtfsSpecificationProto.CsvSpecProto.class);
 
-        GtfsTypeValidator underTest = new GtfsTypeValidator(testGtfsSpec.getCsvspec(0)
+        GtfsSpecificationProto.ColumnSpecProto mockUnspecifiedColumnSpec =
+                mock(GtfsSpecificationProto.ColumnSpecProto.class);
+        GtfsSpecificationProto.ColumnInputType mockUnspecifiedInputType =
+                mock(GtfsSpecificationProto.ColumnInputType.class);
+        when(mockUnspecifiedInputType.getType())
+                .thenReturn(GtfsSpecificationProto.ColumnInputType.InputType.INPUT_TYPE_UNSPECIFIED);
+        when(mockUnspecifiedColumnSpec.getType()).thenReturn(mockUnspecifiedInputType);
+        when(mockUnspecifiedColumnSpec.getName()).thenReturn("type_unspecified");
+        when(mockUnspecifiedColumnSpec.getValueRequired()).thenReturn(true);
+
+        GtfsSpecificationProto.ColumnSpecProto mockTextColumnSpec = mock(GtfsSpecificationProto.ColumnSpecProto.class);
+        GtfsSpecificationProto.ColumnInputType mockTextInputType = mock(GtfsSpecificationProto.ColumnInputType.class);
+        when(mockTextInputType.getType()).thenReturn(GtfsSpecificationProto.ColumnInputType.InputType.TEXT);
+        when(mockTextColumnSpec.getType()).thenReturn(mockTextInputType);
+        when(mockTextColumnSpec.getName()).thenReturn("type_text");
+        when(mockTextColumnSpec.getValueRequired()).thenReturn(true);
+
+        GtfsSpecificationProto.ColumnSpecProto mockFloatColumnSpec = mock(GtfsSpecificationProto.ColumnSpecProto.class);
+        GtfsSpecificationProto.ColumnInputType mockFloatInputType = mock(GtfsSpecificationProto.ColumnInputType.class);
+        when(mockFloatInputType.getType()).thenReturn(GtfsSpecificationProto.ColumnInputType.InputType.FLOAT);
+        when(mockFloatColumnSpec.getType()).thenReturn(mockFloatInputType);
+        when(mockFloatColumnSpec.getName()).thenReturn("type_float");
+        when(mockFloatColumnSpec.getValueRequired()).thenReturn(true);
+
+        GtfsSpecificationProto.ColumnSpecProto mockIntegerColumnSpec =
+                mock(GtfsSpecificationProto.ColumnSpecProto.class);
+        GtfsSpecificationProto.ColumnInputType mockIntegerInputType =
+                mock(GtfsSpecificationProto.ColumnInputType.class);
+        when(mockIntegerInputType.getType()).thenReturn(GtfsSpecificationProto.ColumnInputType.InputType.INTEGER);
+        when(mockIntegerColumnSpec.getType()).thenReturn(mockIntegerInputType);
+        when(mockIntegerColumnSpec.getName()).thenReturn("type_integer");
+        when(mockIntegerColumnSpec.getValueRequired()).thenReturn(true);
+
+        GtfsSpecificationProto.ColumnSpecProto mockColorColumnSpec = mock(GtfsSpecificationProto.ColumnSpecProto.class);
+        GtfsSpecificationProto.ColumnInputType mockColorInputType = mock(GtfsSpecificationProto.ColumnInputType.class);
+        when(mockColorInputType.getType()).thenReturn(GtfsSpecificationProto.ColumnInputType.InputType.COLOR);
+        when(mockColorColumnSpec.getType()).thenReturn(mockColorInputType);
+        when(mockColorColumnSpec.getName()).thenReturn("type_color");
+        when(mockColorColumnSpec.getValueRequired()).thenReturn(true);
+
+        GtfsSpecificationProto.ColumnSpecProto mockTimezoneColumnSpec =
+                mock(GtfsSpecificationProto.ColumnSpecProto.class);
+        GtfsSpecificationProto.ColumnInputType mockTimezoneInputType =
+                mock(GtfsSpecificationProto.ColumnInputType.class);
+        when(mockTimezoneInputType.getType()).thenReturn(GtfsSpecificationProto.ColumnInputType.InputType.TIMEZONE);
+        when(mockTimezoneColumnSpec.getType()).thenReturn(mockTimezoneInputType);
+        when(mockTimezoneColumnSpec.getName()).thenReturn("type_timezone");
+        when(mockTimezoneColumnSpec.getValueRequired()).thenReturn(true);
+
+        GtfsSpecificationProto.ColumnSpecProto mockIdColumnSpec = mock(GtfsSpecificationProto.ColumnSpecProto.class);
+        GtfsSpecificationProto.ColumnInputType mockIdInputType = mock(GtfsSpecificationProto.ColumnInputType.class);
+        when(mockIdInputType.getType()).thenReturn(GtfsSpecificationProto.ColumnInputType.InputType.ID);
+        when(mockIdColumnSpec.getType()).thenReturn(mockIdInputType);
+        when(mockIdColumnSpec.getName()).thenReturn("type_id");
+        when(mockIdColumnSpec.getValueRequired()).thenReturn(true);
+
+        GtfsSpecificationProto.ColumnSpecProto mockUrlColumnSpec = mock(GtfsSpecificationProto.ColumnSpecProto.class);
+        GtfsSpecificationProto.ColumnInputType mockUrlInputType = mock(GtfsSpecificationProto.ColumnInputType.class);
+        when(mockUrlInputType.getType()).thenReturn(GtfsSpecificationProto.ColumnInputType.InputType.URL);
+        when(mockUrlColumnSpec.getType()).thenReturn(mockUrlInputType);
+        when(mockUrlColumnSpec.getName()).thenReturn("type_url");
+        when(mockUrlColumnSpec.getValueRequired()).thenReturn(true);
+
+        GtfsSpecificationProto.ColumnSpecProto mockTimeColumnSpec = mock(GtfsSpecificationProto.ColumnSpecProto.class);
+        GtfsSpecificationProto.ColumnInputType mockTimeInputType = mock(GtfsSpecificationProto.ColumnInputType.class);
+        when(mockTimeInputType.getType()).thenReturn(GtfsSpecificationProto.ColumnInputType.InputType.TIME);
+        when(mockTimeColumnSpec.getType()).thenReturn(mockTimeInputType);
+        when(mockTimeColumnSpec.getName()).thenReturn("type_time");
+        when(mockTimeColumnSpec.getValueRequired()).thenReturn(true);
+
+        GtfsSpecificationProto.ColumnSpecProto mockDateColumnSpec = mock(GtfsSpecificationProto.ColumnSpecProto.class);
+        GtfsSpecificationProto.ColumnInputType mockDateInputType = mock(GtfsSpecificationProto.ColumnInputType.class);
+        when(mockDateInputType.getType()).thenReturn(GtfsSpecificationProto.ColumnInputType.InputType.DATE);
+        when(mockDateColumnSpec.getType()).thenReturn(mockDateInputType);
+        when(mockDateColumnSpec.getName()).thenReturn("type_date");
+        when(mockDateColumnSpec.getValueRequired()).thenReturn(true);
+
+        when(mockFileSpec.getColumnList()).thenReturn(List.of(mockUnspecifiedColumnSpec,
+                mockTextColumnSpec,
+                mockFloatColumnSpec,
+                mockIntegerColumnSpec,
+                mockColorColumnSpec,
+                mockTimezoneColumnSpec,
+                mockIdColumnSpec,
+                mockUrlColumnSpec,
+                mockTimeColumnSpec,
+                mockDateColumnSpec));
+
+        GtfsTypeValidator underTest = new GtfsTypeValidator(mockFileSpec,
+                mock(FloatValidator.class),
+                mock(IntegerValidator.class),
+                mock(UrlValidator.class),
+                mock(RegexValidator.class),
+                mock(RegexValidator.class),
+                Collections.emptySet()
         );
 
         Collection<Notice> result = underTest.validate(new ParsedEntity(
                 TEST_ID,
-                Map.of("date_test", TEST),
+                Map.of("type_unspecified", "",
+                        "type_text", "",
+                        "type_color", "",
+                        "type_timezone", "",
+                        "type_id", "",
+                        "type_url", "",
+                        "type_time", "",
+                        "type_date", ""),
+                new RawFileInfo.RawFileInfoBuilder().filename(TEST_FILE_TST).build()
+        ));
+
+        assertEquals(10, result.size());
+
+        Notice notice = new ArrayList<>(result).get(0);
+        assertThat(notice, instanceOf(MissingRequiredValueNotice.class));
+        assertEquals("E015", notice.getId());
+        assertEquals("Missing required value", notice.getTitle());
+        assertEquals(TEST_FILE_TST, notice.getFilename());
+        assertEquals("Missing value for field:type_unspecified marked as required in entity with id:test_id",
+                notice.getDescription());
+
+        notice = new ArrayList<>(result).get(1);
+        assertThat(notice, instanceOf(MissingRequiredValueNotice.class));
+        assertEquals("E015", notice.getId());
+        assertEquals("Missing required value", notice.getTitle());
+        assertEquals(TEST_FILE_TST, notice.getFilename());
+        assertEquals("Missing value for field:type_text marked as required in entity with id:test_id",
+                notice.getDescription());
+
+        notice = new ArrayList<>(result).get(2);
+        assertThat(notice, instanceOf(MissingRequiredValueNotice.class));
+        assertEquals("E015", notice.getId());
+        assertEquals("Missing required value", notice.getTitle());
+        assertEquals(TEST_FILE_TST, notice.getFilename());
+        assertEquals("Missing value for field:type_float marked as required in entity with id:test_id",
+                notice.getDescription());
+
+        notice = new ArrayList<>(result).get(3);
+        assertThat(notice, instanceOf(MissingRequiredValueNotice.class));
+        assertEquals("E015", notice.getId());
+        assertEquals("Missing required value", notice.getTitle());
+        assertEquals(TEST_FILE_TST, notice.getFilename());
+        assertEquals("Missing value for field:type_integer marked as required in entity with id:test_id",
+                notice.getDescription());
+
+        notice = new ArrayList<>(result).get(4);
+        assertThat(notice, instanceOf(MissingRequiredValueNotice.class));
+        assertEquals("E015", notice.getId());
+        assertEquals("Missing required value", notice.getTitle());
+        assertEquals(TEST_FILE_TST, notice.getFilename());
+        assertEquals("Missing value for field:type_color marked as required in entity with id:test_id",
+                notice.getDescription());
+
+        notice = new ArrayList<>(result).get(5);
+        assertThat(notice, instanceOf(MissingRequiredValueNotice.class));
+        assertEquals("E015", notice.getId());
+        assertEquals("Missing required value", notice.getTitle());
+        assertEquals(TEST_FILE_TST, notice.getFilename());
+        assertEquals("Missing value for field:type_timezone marked as required in entity with id:test_id",
+                notice.getDescription());
+
+        notice = new ArrayList<>(result).get(6);
+        assertThat(notice, instanceOf(MissingRequiredValueNotice.class));
+        assertEquals("E015", notice.getId());
+        assertEquals("Missing required value", notice.getTitle());
+        assertEquals(TEST_FILE_TST, notice.getFilename());
+        assertEquals("Missing value for field:type_id marked as required in entity with id:test_id",
+                notice.getDescription());
+
+        notice = new ArrayList<>(result).get(7);
+        assertThat(notice, instanceOf(MissingRequiredValueNotice.class));
+        assertEquals("E015", notice.getId());
+        assertEquals("Missing required value", notice.getTitle());
+        assertEquals(TEST_FILE_TST, notice.getFilename());
+        assertEquals("Missing value for field:type_url marked as required in entity with id:test_id",
+                notice.getDescription());
+
+        notice = new ArrayList<>(result).get(8);
+        assertThat(notice, instanceOf(MissingRequiredValueNotice.class));
+        assertEquals("E015", notice.getId());
+        assertEquals("Missing required value", notice.getTitle());
+        assertEquals(TEST_FILE_TST, notice.getFilename());
+        assertEquals("Missing value for field:type_time marked as required in entity with id:test_id",
+                notice.getDescription());
+
+        notice = new ArrayList<>(result).get(9);
+        assertThat(notice, instanceOf(MissingRequiredValueNotice.class));
+        assertEquals("E015", notice.getId());
+        assertEquals("Missing required value", notice.getTitle());
+        assertEquals(TEST_FILE_TST, notice.getFilename());
+        assertEquals("Missing value for field:type_date marked as required in entity with id:test_id",
+                notice.getDescription());
+    }
+
+    @Test
+    void dateTypeIsUnsupported() {
+
+        GtfsSpecificationProto.CsvSpecProto mockFileSpec = mock(GtfsSpecificationProto.CsvSpecProto.class);
+        GtfsSpecificationProto.ColumnSpecProto mockColumnSpec = mock(GtfsSpecificationProto.ColumnSpecProto.class);
+        when(mockColumnSpec.getName()).thenReturn("type_date");
+
+        GtfsSpecificationProto.ColumnInputType mockInputType = mock(GtfsSpecificationProto.ColumnInputType.class);
+        when(mockInputType.getType()).thenReturn(GtfsSpecificationProto.ColumnInputType.InputType.DATE);
+
+        when(mockColumnSpec.getType()).thenReturn(mockInputType);
+        when(mockFileSpec.getColumnList()).thenReturn(List.of(mockColumnSpec));
+
+        GtfsTypeValidator underTest = new GtfsTypeValidator(mockFileSpec,
+                mock(FloatValidator.class),
+                mock(IntegerValidator.class),
+                mock(UrlValidator.class),
+                mock(RegexValidator.class),
+                mock(RegexValidator.class),
+                Collections.emptySet()
+        );
+
+        Collection<Notice> result = underTest.validate(new ParsedEntity(
+                TEST_ID,
+                Map.of("type_date", TEST),
                 new RawFileInfo.RawFileInfoBuilder().filename(TEST_FILE_TST).build()
         ));
 
@@ -687,37 +1178,7 @@ class GtfsTypeValidatorTest {
         assertEquals("Unsupported gtfs type", notice.getTitle());
         assertEquals(TEST_FILE_TST, notice.getFilename());
         assertEquals("Tried to validate an unsupported Gtfs type in file:test_file.tst, " +
-                        "entityId:test_id, field name:date_test -->IGNORED",
-                notice.getDescription());
-    }
-
-    @Test
-    void timeTypeIsUnsupported() throws IOException {
-
-        final GtfsSpecificationProto.CsvSpecProtos testGtfsSpec = TextFormat.parse(
-                Resources.toString(Resources.getResource("validator_time_test_gtfs_spec.asciipb"),
-                        StandardCharsets.UTF_8),
-                GtfsSpecificationProto.CsvSpecProtos.class
-        );
-
-        GtfsTypeValidator underTest = new GtfsTypeValidator(testGtfsSpec.getCsvspec(0)
-        );
-
-        Collection<Notice> result = underTest.validate(new ParsedEntity(
-                TEST_ID,
-                Map.of("time_test", TEST),
-                new RawFileInfo.RawFileInfoBuilder().filename(TEST_FILE_TST).build()
-        ));
-
-        assertEquals(1, result.size());
-
-        Notice notice = new ArrayList<>(result).get(0);
-        assertThat(notice, instanceOf(UnsupportedGtfsTypeNotice.class));
-        assertEquals("I001", notice.getId());
-        assertEquals("Unsupported gtfs type", notice.getTitle());
-        assertEquals(TEST_FILE_TST, notice.getFilename());
-        assertEquals("Tried to validate an unsupported Gtfs type in file:test_file.tst, " +
-                        "entityId:test_id, field name:time_test -->IGNORED",
+                        "entityId:test_id, field name:type_date -->IGNORED",
                 notice.getDescription());
     }
 }
